@@ -22,7 +22,7 @@ querybuilder:   '= 1.2.2'
 yamltest:       '= 0.7.0'
 safe_yaml:      '= 0.8.0'
 rubyless:       '= 0.8.10'
-property:       '= 2.3.2'
+property:       '= 2.3.3'
 versions:       '= 0.3.1'
 
 jeweler:
